--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "17",
+    "react-dom": "17"
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
-    "@types/react": "^18.0.19",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "17",
+    "@types/react-dom": "17",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "typescript": "^4.8.3"
