--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/node": "^18.7.16",
     "@types/react": "17",
     "@types/react-dom": "17",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
   }
 }
