--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "12.2.5",
     "react": "17",
-    "react-dom": "17"
+    "react-dom": "17",
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
