--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.13.0",
     "next": "12.2.5",
     "react": "17",
     "react-dom": "17",
-    "react-query": "^3.39.2",
     "sharp": "^0.31.1"
   },
   "devDependencies": {
