--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@tanstack/react-query": "^4.13.0",
     "next": "12.2.5",
+    "next-seo": "^5.9.0",
     "react": "17",
     "react-dom": "17",
+    "react-markdown": "^8.0.3",
     "sharp": "^0.31.1"
   },
   "devDependencies": {
