--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.13.0",
     "next": "12.2.5",
+    "next-mdx-remote": "^4.1.0",
     "next-seo": "^5.9.0",
     "react": "17",
     "react-dom": "17",
