--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
-    "@types/react": "17",
-    "@types/react-dom": "17",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
     "autoprefixer": "^10.4.12",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
