--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@tanstack/react-query": "^4.13.0",
     "next": "12.2.5",
     "next-mdx-remote": "^4.1.0",
