--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@heroicons/react": "^2.0.13",
     "@tanstack/react-query": "^4.13.0",
+    "graphql": "^16.6.0",
     "next": "12.2.5",
     "next-mdx-remote": "^4.1.0",
     "next-seo": "^5.9.0",
