--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@tanstack/react-query": "^4.13.0",
     "graphql": "^16.6.0",
@@ -28,6 +29,8 @@
     "@graphql-codegen/typescript": "^2.8.1",
     "@graphql-codegen/typescript-operations": "^2.5.6",
     "@graphql-codegen/typescript-react-apollo": "^3.3.6",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/node": "^18.7.16",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
