--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.7.1",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.13.0",
     "graphql": "^16.6.0",
     "next": "12.2.5",
@@ -20,8 +21,10 @@
     "next-seo": "^5.9.0",
     "react": "17",
     "react-dom": "17",
+    "react-hook-form": "^7.39.5",
     "react-markdown": "^8.0.3",
-    "sharp": "^0.31.1"
+    "sharp": "^0.31.1",
+    "yup": "^1.0.0-beta.8"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.13.12",
