--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.9.10",
+    "@stripe/stripe-js": "^1.46.0",
     "@tanstack/react-query": "^4.13.0",
     "graphql": "^16.6.0",
     "next": "12.2.5",
@@ -24,6 +25,7 @@
     "react-hook-form": "^7.39.5",
     "react-markdown": "^8.0.3",
     "sharp": "^0.31.1",
+    "stripe": "^11.3.0",
     "yup": "^1.0.0-beta.8"
   },
   "devDependencies": {
